# rag-poc

./: .gitignore  README.md  config.py  index_md.py  pyproject.toml  search_md.py
learning/: README.md  compare_similarity.py  similarity_playground.py
